--- a/exercises/js_100.md
+++ b/exercises/js_100.md
@@ -1,17 +1,157 @@
-# JS 100 Small Problems Solutions
+# JS100 Small Problems Solutions
 ## Reading Documentation I
 
 1. MDN
-2. str.toLowerCase()
-3. str[0].toUpperCase() + str.slice(1).toLowerCase()
-4. ['fish', 'and', 'chips'][1]
+2. `str.toLowerCase()`
+3. `str[0].toUpperCase() + str.slice(1).toLowerCase()`
+4. `['fish', 'and', 'chips'][1]`
 5. The result is undefined
-6. 'palm tree', 'sequoia'
+6. 'palm tree', 'palm tree', 'sequoia'
 7. 'number', 'string', 'boolean', 'number', 'object', 'undefined'
+  * `typeof` returns a string representing the type of its operand. 
 8. 'string', 'object', 'boolean'
 9. 
+```
 - ['Starting', 'to', 'get', 'the', 'hang', 'of', 'it...',  '#javascript', '#launchschool']`
 - ['#launchschool, ...rest]
 - '#launchschool #javascript it... ....'
-   
+```
 10. true, false
+
+
+## Reading Documentation II
+1.
+```js
+let iceCreamTaste = 'chocolate';
+let iceCreamDensity = 10;
+
+while (iceCreamDensity > 0) {
+	console.log('Drip...');
+	iceCreamDensity--;
+}
+
+console.log('The ' + iceCreamTaste + ' ice cream melted.');
+```
+### Discussion
+Here are the guidelines that were not followed in the original code snippet:
+
+* Use camelCase for variable names.
+* End all statements with a semicolon.
+* Indent lines with two spaces.
+* Use spaces between keywords (like while) and opening parentheses, as well as between closing 
+* parentheses and opening curly brackets.
+* Put the opening curly brackets of the while block on the same line as the while statement.
+* Put spaces before and after operators like +.
+
+2. 
+* Number
+* BigInt
+* Boolean
+* String
+* Symbol
+* null
+* Undefined
+
+3. `Number.MAX_VALUE; // 1.7976931348623157e+308`
+
+4. ```4 * 5 + 3 ** 2 / 10;
+20 + 9 / 10;
+// => 20.9```
+
+5. Date.now() returns a number with the current timestamp since 1970
+6. getYear() is deprecated. Current year - 1900. getFullYear() gives the expected output
+7. Array.prototype.join() expects a glue argument. Default argument is ','. Additional arguments are ignored
+8. Join 2 or more strings together by interpolation in a template literal string or through concatenation. The concat method also works.
+```
+concat()
+concat(str1)
+concat(str1, str2)
+concat(str1, str2, /* …, */ strN)
+```
+9. Not enough parenthesis for the conditional expression of the if statement
+10. `tweet.length` is a property not a function. You need to remove the () for this to work
+
+## Loops
+1. 
+```js
+for (let i = 0; i <= 10; i += 2) {
+	console.log(i);
+	//  >> 0, 2, 4, 6, 8, 10
+}
+```
+2. 
+```js
+for (let i = 10; i > 0; i -= 1) {
+	console.log(i);
+}
+console.log('Launch');
+```
+3. 
+```js
+let greeting = 'Aloha';
+for (let i = 0; i < 3; i++) {
+	console.log(greeting);
+}
+```
+4. 
+```js
+let array = [1, 2, 3, 4];
+let index = 0;
+
+while (index < array.length) {
+	console.log(array[index]);
+	index += 1;
+}
+```
+If the array is empty, nothing will be logged because the array length would equal the index.
+
+5. 
+```js
+let cities = ['Istanbul', 'Los Angeles', 'Tokyo', null, 'Vienna', null, 'London', 'Beijing', null];
+
+for (let i = 0; i < cities.length; i += 1) {
+  if (cities[i] === null) {
+    continue;
+  }
+
+  console.log(cities[i].length);
+}
+```
+6. The above code never terminates, because the condition of the for loop was left empty. In this case, JavaScript treats it as true.
+
+```js
+for (let i = 0; ; i += 1) {
+  console.log("and on");
+  break;
+}
+```
+7. 
+```js
+for (let i = 0; i < 1; i += 1) {
+	console.log('just once');
+}
+```
+8. 
+```js
+let num = 1;
+
+while (num < 40) {
+  console.log(num);
+  num += 2;
+}
+```
+9. 
+```js
+let fish = ['Dory', 'Marlin', 'Gill', 'Nemo', 'Bruce'];
+
+for (let i = 0; i < fish.length; i += 1) {
+  console.log(fish[i]);
+
+  if (fish[i] === 'Nemo') {
+    break;
+  }
+}
+```
+10. `do while` runs the code first before checking the conditional expression. So `do while` will always run the code block at least once. `while` checks the conditional expression first.
+
+
