--- a/exercises/js_100.md
+++ b/exercises/js_100.md
@@ -154,4 +154,185 @@ for (let i = 0; i < fish.length; i += 1) {
 ```
 10. `do while` runs the code first before checking the conditional expression. So `do while` will always run the code block at least once. `while` checks the conditional expression first.
 
+## Conditionals
+Conditionals
 
+1. falsy values `null`, `empty string`, `0`, `false`, `undefined`, `NaN`
+
+2. 
+```js
+let randomNumber = Math.round(Math.random());
+
+if (randomNumber) {
+	console.log('Yes');
+} else {
+	console.log('No');
+}
+``` 
+
+3. Ternary version
+
+```js
+let randomNumber = Math.round(Math.random());
+randomNumber ? console.log('Yes') : console.log('No');
+```
+4. 
+```js
+let weather = 'sunny';
+
+if (weather === 'sunny') {
+	console.log("It's a beautiful day!");
+} else if (weather === 'rainy') {
+	console.log('Grab your umbrella');
+} else {
+	console.log("Let's stay inside.");
+}
+```
+
+5. This code will jump to the case clause where it meets the criteria. Then it will run the code until it runs into a break statement.
+
+Since there are no break statements, the code will run towards the end of the switch statement.
+```js
+let animal = 'horse';
+
+switch (animal) {
+	case 'duck':
+		console.log('quack');
+	case 'squirrel':
+		console.log('nook nook');
+	case 'horse':
+		console.log('neigh');
+	case 'bird':
+		console.log('tweet tweet');
+	default:
+		console.log('*cricket*');
+}
+```
+6. 
+```js
+let weather = 'sunny';
+
+switch (weather) {
+	case 'sunny':
+		console.log("It's a beautiful day!");
+		break;
+	case 'rainy':
+		console.log('Grab your umbrella');
+		break;
+	default:
+		console.log("Let's stay inside.");
+		break;
+}
+```
+
+7. It will output Yes!
+8. It will ouput No....
+9. It will output '$3.99'
+10. It will output true
+
+## Functions I
+1. 
+```js
+function sum(num1 = 0, num2 = 0) {
+	return num1 + num2;
+}
+```
+2. 
+```js
+function brendanEichQuote() {
+	console.log('Always bet on JavaScript');
+}
+// returns undefined
+```
+3. 
+```js
+function cite(person, quote) {
+	console.log(`${person} said: ${quote}`);
+}
+```
+4. 
+```js
+function squaredNumber(num) {
+	return num ** 2;
+}
+```
+5. 
+It won't output anything because the function is not invoked.
+```js
+function multiplesOfThree() {
+	let divisor = 1;
+
+	for (let dividend = 3; dividend <= 30; dividend += 3) {
+		console.log(dividend + ' / ' + divisor + ' = 3');
+		divisor += 1;
+	}
+}
+
+multiplesOfThree;
+``` 
+6. 
+```js
+function compareByLength(str1, str2) {
+	if (str1.length < str2.length) {
+		return -1;
+	} else if (str1.length > str2.length) {
+		return 1;
+	} else {
+		return 0;
+	}
+}
+```
+7. 
+```js
+'Captain Ruby'.replace('Ruby', 'Javascript')
+```
+8. 
+```js
+function internationalGreeting(language-code) {
+	switch (language-code) {
+	case 'en': return 'Hi!';
+	case 'fr': return 'Salut!';
+	case 'pt': return 'Olá!';
+	case 'de': return 'Hallo!';
+	case 'sv': return 'Hej!';
+	case 'af': return 'Haai!';
+}}
+```
+9. 
+```js
+function extractLanguage(locale) {
+	return locale.slice(0, 2);
+}
+
+function extractLanguage2(locale) {
+	return locale.split('_')[0];
+}
+
+extractLanguage('en_US.UTF-8');
+```
+10. 
+```js
+function extractRegion(locale) {
+	return locale.slice(3, 5);
+}
+```
+11. 
+```js
+function localGreet(locale) {
+	switch (extractLanguage(locale)) {
+		case 'en':
+			switch (extractLanguage(locale)) {
+				case 'US':
+					return 'Hey!';
+				case 'GB':
+					return 'Hello!';
+				case 'AU':
+					return 'Howdy!';
+			}
+		case 'fr':
+			return 'Salut';
+		case 'de':
+			return 'Hallo!';
+	}
+}
+```
