Add exercises solutions

--- a/exercises/js_100.md
+++ b/exercises/js_100.md
@@ -663,7 +663,30 @@ function catAge(humanYears) {
 }
 
 console.log(catAge(3));
+
+// second solution
+function catAge(humanYears) {
+  switch (humanYears) {
+    case 0:
+      return 0;
+    case 1:
+      return 15
+    case 2:
+      return 24
+    default:
+      return 24 + (humanYears - 2) * 4
+  }
+}
+
+
+catAge(0); // 0
+catAge(1); // 15
+catAge(2); // 24
+catAge(3); // 28
+catAge(4); // 32
+catAge(5); // 36
 ```
+
 6. 
 ```js
 // 6 Remove Last Char
@@ -687,6 +710,7 @@ console.log(sentence('like', 'birds'));
 ```js
 // 8 Arrow Functions (Part 2)
 let initGame = () => ({ level: 1, score: 0 });
+// Use parentheses to infore the returning of an object 
 ```
 ## Objects
 ```js
@@ -723,21 +747,44 @@ console.log(jane);
 
 // 7
 const keys = Object.keys(vehicle);
+
+let objKeys = [];
+
+for (let prop in vehicle) {
+  objKeys.push(prop);
+}
 // 8
 const nestedPerson = Object.entries(person)
+
+let nestedArray = [];
+  for(let prop in person) {
+    nestedArray.push([prop, person[prop]])
+  }
 // 9
 let nestedArray = [['title', 'Duke'], ['name', 'Nukem'], ['age', 33]];
-const obj = {};
+const object = {};
+for (let i = 0; i < nestedArray.length; i++) {
+  let property = nestedArray[i];
 
-for (let index in nestedArray) {
-	console.log(nestedArray[index]);
-	obj[nestedArray[index][0]] = nestedArray[index][1];
+  object[property[0]] = property[1];
 }
 
-console.log(obj);
+console.log(object);
+// Expected output:
+// { title: 'Duke', name: 'Nukem', age: 33 }
+
+// alternative solution
+let person = Object.fromEntries(nestedArray);
+console.log(person);
+// { title: 'Duke', name: 'Nukem', age: 33 }
+
 // 10
 function clone(obj) {
 	return {...obj}
 	// Object.assign({}, obj)
+}
+
+function clone(obj) {
+  return Object.assign({}, obj);
 }
 ```
