Add exercises to js_101

--- a/exercises/js_101.md
+++ b/exercises/js_101.md
@@ -182,3 +182,97 @@ console.log(myWords);
 
 This logs `[ 'HELLO' ] `to the console. Unlike the previous example, here we are mutating the array by changing the value at index `0`. It's important to note that we aren't mutating the original string, but instead setting the value at index `0` to a new string returned by calling `String.prototype.toUpperCase` on the original string.
 
+
+# Variables as Pointers
+
+What will the following code log to the console and why? 
+```js
+let myWord = 'Hello';
+let myOtherWord = myWord;
+
+console.log(myWord);
+console.log(myOtherWord);
+```
+Solution 1
+This logs the string `'Hello'` twice.
+
+The `myWord` variable is initialized to the string '`Hello`'. On line 2, we assign `myOtherWord` to `myWord`. At this point, both variables point to a string with the value of `'Hello'`; it's important to note though, even though the strings have the same value they are different strings stored at different memory addresses.
+
+Question 2
+What will the following code log to the console and why? 
+```js
+let myWord = 'Hello';
+let myOtherWord = myWord;
+myWord = 'Goodbye';
+
+console.log(myWord);
+console.log(myOtherWord);
+```
+Solution 2
+This logs the string `'Goodbye'` and then the string `'Hello'`.
+
+This is very similar to Exercise 1 with one key difference: on line 3 we reassign `myWord` to the string `'Goodbye'`. In JavaScript, primitive values are stored directly in the variable’s memory space. When you assign a primitive value to a variable, a new copy of that value is created and stored at a specific memory address associated with that variable. Therefore, when you assign `‘Hello’ `to `myWord` and then assign `myWord` to `myOtherWord`, both variables `myWord` and `myOtherWord` hold separate copies of the value `‘Hello’` located at different memory addresses.
+
+Question 3
+What will the following code log to the console and why? 
+```js
+let myWords = ['Hello', 'Goodbye'];
+let myOtherWords = myWords;
+myWords[0] = 'Hi';
+
+console.log(myWords);
+console.log(myOtherWords);
+```
+Solution 3
+
+This will log` ['Hi', 'Goodbye']` twice. `myWords` points to a reference which points to this `['Hello', 'Goodbye']` array in memory. Then `myOtherWords` is declared and assigned `myWords`. At this point both variables point to the same array in memory location. When `mywords[0] = 'Hi'` is executed `'Hi' `is assigned to the `0` index of `mywords` array. In other words, the first element of `myWords` is changed to `'Hi'`. When both variables are logged, the change is appeared in both variables because they both point to the same array reference and arrays, being objects are mutable.
+
+Question 4
+What will the following code log to the console and why? 
+Copy Code
+let myWords = ['Hello', 'Goodbye'];
+let myOtherWords = myWords;
+myWords = ['Hi', 'Bye'];
+
+console.log(myWords);
+console.log(myOtherWords);
+Solution 4
+This logs the array [ 'Hi', 'Bye' ], and then the array ['Hello', 'Goodbye'].
+
+As with Exercise 3, we're again dealing with a reference type. Again, after line 2, both variables have as their value the memory address where the array is stored. In this exercise though, line 3 reassigns the myWords variable to a different value. In this case we're reassigning it to another array, but we could equally have reassigned it to a primitive value. The important point is that the variable now points to a different value and so the two variables no longer have the same value (the memory address where the ['Hello', 'Goodbye'] array is stored). When we log each variable, different values are therefore output.
+
+Question 5
+What will the following code log to the console and why? 
+```js
+let myWords = ['Hello', 'Goodbye'];
+let myWord = myWords[0];
+myWords[0] = 'Hi';
+
+console.log(myWords);
+console.log(myWord);
+```
+Solution 5
+This logs the array `[ 'Hi', 'Goodbye' ]`, and then the string` 'Hello'`.
+
+On line 1 we declare and initialize the variable `myWords` to an array containing two elements, the strings `'Hello'` and `'Goodbye'`.
+On line 2 we declare and initialize another variable, `myWord`, to the element at index `0` of the array referenced by `myWords`, which is the string `'Hello'`. Because that string is a primitive type, index `0` of the array and the `myWord` variable each reference different strings at different memory addresses, even though those strings have the same value.
+On line 3 we reassign index `0` of the `myWords` array to a new value, the string` 'Hi'`. This changes the value stored at index `0` of the array, but has no effect on the value stored by the `myWord` variable.
+When we log the value of `myWords` and `myWord` on line 5 and 6, we can see that the `myWords` array has the string `'Hi'` at index `0` and `myWord` has a value of `'Hello'`.
+
+Question 6
+What will the following code log to the console and why? 
+```js
+let myWords = ['Hello', 'Goodbye'];
+let myWord = 'Hi';
+myWords[0] = myWord;
+myWord = 'Hello';
+
+console.log(myWords);
+console.log(myWord);
+```
+Solution 6
+This logs the array `[ 'Hi', 'Goodbye' ]`, and then the string `'Hello'`.
+
+We again begin with a `myWords` initialized to an array containing two elements, the strings `'Hello'` and `'Goodbye'`. In this case though we assign `myWord` to the string `'Hi'`, and then set the element at index `0` of the `myWords` array to the value of `myWord` before reassigning `myWord` to the string `'Hello'`.
+
+The principles at work are the same in both exercises. The values we are dealing with are primitives, and the value of these primitive values are stored at different memory addresses. Changing the value of one does not affect the other.
