Add exercises with solutions to js_101.md

--- a/exercises/js_101.md
+++ b/exercises/js_101.md
@@ -229,7 +229,7 @@ This will log` ['Hi', 'Goodbye']` twice. `myWords` points to a reference which p
 
 Question 4
 What will the following code log to the console and why? 
-Copy Code
+```js
 let myWords = ['Hello', 'Goodbye'];
 let myOtherWords = myWords;
 myWords = ['Hi', 'Bye'];
@@ -276,3 +276,108 @@ This logs the array `[ 'Hi', 'Goodbye' ]`, and then the string `'Hello'`.
 We again begin with a `myWords` initialized to an array containing two elements, the strings `'Hello'` and `'Goodbye'`. In this case though we assign `myWord` to the string `'Hi'`, and then set the element at index `0` of the `myWords` array to the value of `myWord` before reassigning `myWord` to the string `'Hello'`.
 
 The principles at work are the same in both exercises. The values we are dealing with are primitives, and the value of these primitive values are stored at different memory addresses. Changing the value of one does not affect the other.
+
+
+# Pass by reference vs Pass by value
+
+Question 1
+What will the following code log to the console and why? 
+
+```js
+function changeMyWord(word) {
+  console.log(word);
+  word = word.toUpperCase();
+}
+
+let myWord = 'Hello';
+changeMyWord(myWord);
+console.log(myWord);
+Solution 1
+This logs 'Hello' to console twice.
+```
+The function changeMyWord defines one parameter word. It logs the value of that parameter to the console, and then reassigns word to the return value of word.toUpperCase(), which, in this case, is 'HELLO'.
+
+On line 6, the variable myWord is declared and initialized to the String 'Hello'. On line 7, we pass in myWord as an argument to the changeMyWord function invocation. At this point, both the myWord variable and the word function parameter have as their value the String 'Hello', so when the changeMyWord function logs the value of word, 'Hello' is logged to console. Crucially though, because we are dealing with a primitive value, the myWord variable and the word function parameter point to different places in memory.
+
+Essentially, passing in myWord as an argument to the changeMyWord function invocation acts like pass-by-value. Because of this, nothing we do with the word parameter in the function, such as calling toUpperCase() on it and re-assigning word, will have any effect on the value of the myWord variable. Therefore, when we log we log the value of `myWord` `Hello` is output. 
+
+Question 2
+What will the following code log to the console and why? 
+
+```js
+function changeMyWord(word) {
+  console.log(word);
+  word = word.toUpperCase();
+  return word;
+}
+
+let myWord = 'Hello';
+myWord = changeMyWord(myWord);
+console.log(myWord);
+```
+Solution 2
+This logs 'Hello' to console once, and 'HELLO' to console once.
+
+This example is very similar to Example 1, with two key differences:
+
+The changeMyWord function returns the value of the word parameter.
+The myWord variable is reassigned to that returned value.
+It's the combination of these two things that leads to the difference in output here compared to Example 1. Because we're effectively using pass-by-value here, the only way to impact the value of the myWord variable outside the scope of the function is by returning something from the function. Just returning a value is not sufficient on its own, however, we also have to do something with that value such as assigning it to a variable.
+
+Question 3
+What will the following code log to the console and why? 
+
+```js
+function changeMyWord(word) {
+  console.log(word);
+  word = word.toUpperCase();
+  return word;
+}
+
+let myWord = 'Hello';
+let myOtherWord = changeMyWord(myWord);
+console.log(myWord);
+console.log(myOtherWord);
+```
+Solution 3
+This logs 'Hello' to console twice, and 'HELLO' to console once.
+
+This is similar to Exercise 2. The key difference is that rather than reassigning myWord to the return value of the changeMyWord function invocation, we're declaring and initializing another variable myOtherWord to that return value. Therefore when we log myWord it still has its initial value of 'Hello', and only when we log myOtherWord do we see the value of 'HELLO' returned by the function.
+
+This again demonstrates that nothing we do within the changeMyWord function will affect the value of the String primitive assigned to the myWord variable. We can use the value returned by the function, but only by assigning a variable to it, or reassigning an existing variable. It's important to draw a distinction between the process of assignment and reassignment of variables and the concept of mutability.
+Question 4
+What will the following code log to the console and why? 
+
+```js
+function changeMyWords(words) {
+  console.log(words);
+  words[0] = 'Hi';
+}
+
+let myWords = ['Hello', 'Goodbye'];
+changeMyWords(myWords);
+console.log(myWords);
+```
+Solution 4
+This will log ['Hello', 'Goodbye'] and then ['Hi', 'Goodbye'] to the console.
+
+In this exercise, the myWords variable is initialized to an array containing two elements, the strings 'Hello' and 'Goodbye'. Because an array is a reference type rather than a primitive, when we pass myWords into the changeMyWords function invocation, this acts like pass-by-reference. The myWords variable and the words function parameter both point to the same array. When we initially log words on line 2 we see the same array elements from the array literal to which we initialized myWords. We then mutate the array on line 3 by assigning index 0 to the string 'Hi'. When we subsequently log myWords on line 8, we see the mutated array.
+
+Question 5
+What will the following code log to the console and why? 
+
+```js
+function changeMyWords(words) {
+  console.log(words);
+  words = ['Hi', 'Goodbye'];
+}
+
+let myWords = ['Hello', 'Goodbye'];
+changeMyWords(myWords);
+console.log(myWords);
+```
+Solution 5
+This will log ['Hello', 'Goodbye'] twice.
+
+This might look similar to Exercise 4, but the key difference is what happens on line 3. As with the previous exercise, when myWords is passed as an argument to the changeMyWords function invocation, it acts like pass-by-reference since myWords is assigned to an array. At this point the myWords variable and the words function parameter both point to the same array, and it is this array that is output when we log words on line 2. On line 3, however, we reassign the words parameter to a new array. Again, it's important to be clear that this reassignment is not the same thing as mutating the array. In this exercise, we don't mutate the array at any point, and so when we log myWords on line 8 we see the array with its original elements.
+
